@@ -1,6 +1,5 @@
-DIST jibx_1_1_3.zip 6565693 RMD160 469b25a488ed30b69d8b5e2260edf8e79f108dea SHA1 a851a1aeb0dc19369f55f4c21670aacb88a503a1 SHA256 c056475c9479c9fd38f123758ce731423c5aa0c0d4f0bd88ac3e2f1aafca3782
 DIST jibx_1_1_5.zip 6788994 RMD160 dc18629428de8e4c230e5f1febe106d0b8844b9d SHA1 06b727b383903aaee923287d90ad4c106e362fd2 SHA256 121dbe5b7338081ffbf09cd1175afe5e1862a63673f467d560e0ab4c27fb3f17
-EBUILD jibx-1.1.3.ebuild 1456 RMD160 adb8681b06bb8c2bd9e50529ac2590cd30287c67 SHA1 dacd01235243c8eaa5039d7b36a3daa1b082949e SHA256 0a85514f586c25f6af96dbb451e488a9ace92811dafc1032024f45c671271d13
+EBUILD jibx-1.1.5-r1.ebuild 1323 RMD160 b0f49d6a33e81cffc118b5511b38e5d81762d811 SHA1 2a2058df720780f18ef6dccdf25ee3d43f69f64c SHA256 e43ba2b14c09b03417318feef9d833b327fd7e6b6053a50f946f8ea70e26396f
 EBUILD jibx-1.1.5.ebuild 1403 RMD160 5504d81c2cc38b097ac84ab87f3403f45fca3766 SHA1 a70a9d53acbc5f23c6a4a901d361e6984b729e57 SHA256 3657692afbbe5dfc0adfcf3ed43de1e51b29631a8a860da3f653563ce6fe7ec7
-MISC ChangeLog 1020 RMD160 a7d3af21e4f699b476e5ed983400d45ac0409383 SHA1 022e82e7b3836e0d9be9306843d11ee42f757b40 SHA256 8f2daddd0a4379ffb1df071c27fe926f60be2bbc968abf79317f4b24b8f441a9
+MISC ChangeLog 1258 RMD160 e4ec34e473242bfbd89516736c302139870dac68 SHA1 57484f24fcea727596b9dfaa02c0e9f50b53e2b4 SHA256 80bcea01e2b15e38fc7d12a6cdd2ed9f897e9291b66d69d3a824c8e10439fe5b
 MISC metadata.xml 159 RMD160 7da5c733c224383ffe350605bc36721a3ff2536f SHA1 99c2655c7bbee2cbc8c79edb2d00d481d62faf95 SHA256 a4ced33e98b00e3a3f725c4c40ef8e76c338db53389465ef871105fbe6e8cbbb
