@@ -1,6 +1,14 @@
 # ChangeLog for dev-java/jibx
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jibx/ChangeLog,v 1.7 2008/02/20 00:26:36 betelgeuse Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jibx/ChangeLog,v 1.9 2009/05/13 23:30:39 betelgeuse Exp $
+
+*jibx-1.1.5-r1 (13 May 2009)
+
+  13 May 2009; Petteri Räty <betelgeuse@gentoo.org> +jibx-1.1.5-r1.ebuild:
+  Migrate to the stax-api virtual.
+
+  13 May 2009; Petteri Räty <betelgeuse@gentoo.org> -jibx-1.1.3.ebuild:
+  Remove old version.
 
   20 Feb 2008; Petteri Räty <betelgeuse@gentoo.org> jibx-1.1.5.ebuild:
   Fix jar installation to not install dep jars.
